[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HGAITetris"
version = "1.1.1"
authors = [
  { name="Bryce Bartlett", email="bbartlett@dcscorp.com" },
]
description = "Tetris you can play with an A.I!"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DCSHGAI/HGAITetris"
"Bug Tracker" = "https://github.com/DCSHGAI/HGAITetris/issues"